feat(bpm): 实现流程实例相关功能
- 新增流程实例详情接口
- 新增流程实例分页查询接口（管理员和用户视角）
- 新增流程实例取消功能（用户和管理员）
- 新增获取流程实例 BPMN 模型视图功能
- 优化流程实例数据结构和转换逻辑